# god_tier_arbitraj

./: .gitignore  AUDIT_REPORT_v22.md  AUDIT_REPORT_v23.md  AUDIT_REPORT_v26.md  README.md  run_all_tests.sh
.copilot/skills/: autonomous-arbitrage-bot.skill.md  autonomous-solidity-contract.skill.md  emergency-response.skill.md  full-system-test.skill.md  latency-optimizer.skill.md  pool-discovery.skill.md  production-deploy.skill.md  profit-analytics.skill.md  revm-foundry-compare.skill.md  security-audit.skill.md  self-healing-pipeline.skill.md
.github/: copilot-instructions.md
.github/agents/: devops-commander.agent.md  orchestrator.agent.md  performance-tuner.agent.md  rust-ninja.agent.md  security-sentinel.agent.md  shadow-analyst.agent.md  solidity-pro.agent.md
.github/hooks/: auto-lint-on-save.hook.json  block-ethers-rs.hook.json  block-require-revert.hook.json  block-std-mutex.hook.json  block-unwrap.hook.json  enforce-callback-validation.hook.json  enforce-minprofit-check.hook.json  enforce-reentrancy-guard.hook.json  inject-project-context.hook.json  warn-clone-in-loop.hook.json  warn-sequential-await.hook.json  warn-storage-write.hook.json
.github/prompts/: debug-tx.prompt.md  rust-optimize.prompt.md  rust-review.prompt.md  rust-test.prompt.md  simulate-arb.prompt.md  sol-gas-audit.prompt.md  sol-security-audit.prompt.md  sol-test.prompt.md
Bot/: .env  .env.example  .gitignore  Cargo.toml  chaos_injector.sh  core_pools.json
Bot/proptest-regressions/: math.txt
Bot/src/: discovery_engine.rs  dust_sweeper.rs  executor.rs  json_logger.rs  key_manager.rs  main.rs  math.rs  pool_discovery.rs  route_engine.rs  simulator.rs  state_sync.rs  strategy.rs  telegram.rs  transport.rs  types.rs
Contract/: foundry.toml
Contract/script/: Deploy.s.sol
Contract/src/: Arbitraj.sol
Contract/test/: Arbitraj.t.sol
