[package]
name = "arbitraj_botu"
version = "6.0.0"
edition = "2021"

[dependencies]
# ── Asenkron Çalışma Zamanı ──
tokio = { version = "1", features = ["full"] }

# ── Blockchain Etkileşimi (Alloy — En Hızlı Rust EVM Kütüphanesi) ──
alloy = { version = "0.1", features = ["full"] }

# ── Yerel EVM Simülasyonu (REVM — Sıfır Gecikme) ──
revm = { version = "9", default-features = false, features = ["std"] }

# ── Veri İşleme ──
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── Hata Yönetimi ──
eyre = "0.6"

# ── Asenkron Stream ──
futures-util = "0.3"

# ── .env Desteği ──
dotenvy = "0.15"

# ── Zamanlama ──
chrono = "0.4"

# ── Renkli Terminal ──
colored = "2"

# ── Hızlı Kilit Mekanizması (Çoklu Thread Erişimi) ──
parking_lot = "0.12"

# ── Hex Literal (Derleme Zamanı Byte Dizileri) ──
hex-literal = "0.4"

[dev-dependencies]
# ── Property-Based Testing (Çökme Testi) ──
proptest = "1.4"
