[package]
name = "arbitraj_botu"
version = "25.0.0"
edition = "2021"

[dependencies]
# ── Asenkron Çalışma Zamanı ──
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# ── Blockchain Etkileşimi (Alloy — En Hızlı Rust EVM Kütüphanesi) ──
alloy = { version = "1.7", default-features = false, features = [
    "std", "reqwest", "reqwest-rustls-tls",
    "contract", "providers", "provider-http",
    "provider-ws", "provider-ipc", "pubsub",
    "rpc-types", "signer-local", "signers",
    "network", "eips", "sol-types", "json-abi",
    "json", "dyn-abi", "serde", "rlp",
] }

# ── Yerel EVM Simülasyonu (REVM — Sıfır Gecikme) ──
revm = { version = "36", default-features = false, features = ["std", "c-kzg"] }

# ── Veri İşleme ──
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── Hata Yönetimi ──
eyre = "0.6"

# ── Asenkron Stream ──
futures-util = "0.3"

# ── .env Desteği ──
dotenvy = "0.15"

# ── Zamanlama ──
chrono = "0.4"

# ── Renkli Terminal ──
colored = "2"

# ── Hızlı Kilit Mekanizması (Çoklu Thread Erişimi) ──
parking_lot = "0.12"

# ── Lock-Free Atomik Pointer Swap (Hot-Path State) ──
arc-swap = "1"

# ── Hex Literal (Derleme Zamanı Byte Dizileri) ──
hex-literal = "0.4"

# ── HTTP İstemci (Pool Discovery API çağrıları) ──
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# ── Güvenli Anahtar Yönetimi (Encrypted Key Management) ──
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
rpassword = "5"
hex = "0.4"

[dev-dependencies]
# ── Property-Based Testing (Çökme Testi) ──
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
